[gd_scene load_steps=9 format=2]

[ext_resource path="res://ProtonSendTX.gd" type="Script" id=1]
[ext_resource path="res://assets/proton_animated/ProtonAnimated10.tscn" type="PackedScene" id=4]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="ProceduralSky" id=2]
sky_top_color = Color( 0.741176, 0.647059, 0.945098, 1 )
ground_bottom_color = Color( 0.458824, 0.262745, 0.890196, 1 )
ground_horizon_color = Color( 0.458824, 0.262745, 0.890196, 1 )

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="PlaneMesh" id=5]

[sub_resource type="LargeTexture" id=6]
resource_local_to_scene = true

[node name="Node" type="Node2D"]
script = ExtResource( 1 )

[node name="Button_Login" type="Button" parent="."]
margin_left = 351.0
margin_top = 88.0
margin_right = 420.0
margin_bottom = 108.0

[node name="Label_Login" type="Label" parent="Button_Login"]
margin_left = 12.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 17.0
text = "Login"

[node name="Button_Switch" type="Button" parent="."]
margin_left = 348.0
margin_top = 28.0
margin_right = 527.0
margin_bottom = 48.0

[node name="Label_Switch" type="Label" parent="Button_Switch"]
margin_left = 10.0
margin_top = 3.0
margin_right = 172.0
margin_bottom = 17.0
text = "Switch to Send NFT mode"

[node name="Button_Send" type="Button" parent="."]
margin_left = 352.0
margin_top = 371.0
margin_right = 421.0
margin_bottom = 391.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label_Send" type="Label" parent="Button_Send"]
margin_left = 12.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 17.0
text = "Send"

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.653482, 1.8295 )

[node name="ProtonAnimated" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.11, 0, 0, 0, 0.11, 0, 0, 0, 0.11, 0, 0.0400981, -0.131146 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
material = SubResource( 4 )
mesh = SubResource( 5 )
texture = SubResource( 6 )

[node name="TX_ID" type="RichTextLabel" parent="."]
margin_left = 353.0
margin_top = 422.0
margin_right = 729.0
margin_bottom = 482.0
rect_pivot_offset = Vector2( 23, 8 )
text = "TX_ID"

[node name="Account" type="RichTextLabel" parent="."]
margin_left = 353.0
margin_top = 114.0
margin_right = 651.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 23, 8 )
text = "Account"

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 353.0
margin_top = 143.0
margin_right = 651.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 23, 8 )
text = "Name"

[node name="Name2" type="RichTextLabel" parent="."]
margin_left = 353.0
margin_top = 173.0
margin_right = 731.0
margin_bottom = 199.0
rect_pivot_offset = Vector2( 23, 8 )
text = "Avatar"

[node name="To" type="LineEdit" parent="."]
margin_left = 411.0
margin_top = 258.0
margin_right = 592.0
margin_bottom = 282.0
text = "glbdex"

[node name="Label_To" type="Label" parent="To"]
margin_left = -58.0
margin_top = 6.0
margin_right = -18.0
margin_bottom = 20.0
text = "To"

[node name="Amount" type="LineEdit" parent="."]
margin_left = 411.0
margin_top = 293.0
margin_right = 539.0
margin_bottom = 317.0
text = "0.0001"

[node name="Label_Amount" type="Label" parent="Amount"]
margin_left = -58.0
margin_top = 6.0
margin_right = -18.0
margin_bottom = 20.0
text = "Amount"

[node name="Label_XPR" type="Label" parent="Amount"]
margin_left = 142.0
margin_top = 6.0
margin_right = 169.0
margin_bottom = 20.0
text = "XPR"

[node name="Memo" type="LineEdit" parent="."]
margin_left = 410.0
margin_top = 326.0
margin_right = 645.0
margin_bottom = 350.0
text = "Sent from GoDot Engine"

[node name="Label_Memo" type="Label" parent="Memo"]
margin_left = -58.0
margin_top = 5.0
margin_right = -13.0
margin_bottom = 19.0
text = "Memo"

[connection signal="pressed" from="Button_Login" to="." method="_on_Button_Login_pressed"]
[connection signal="pressed" from="Button_Switch" to="." method="_on_Button_Scene_pressed"]
[connection signal="pressed" from="Button_Send" to="." method="transfer"]
